[tool.poetry]
name = "imagetiffcollector"
version = "0.1.0"
description = ""
authors = ["Vladimir Titov <tvv-vg@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
